--- a/Curriculo.html
+++ b/Curriculo.html
@@ -15,7 +15,7 @@
             <img src="imagens/ale.jpg" class="foto-do-perfil" alt="">
             <div class="info-perfil">
                 <h1 class="nome">ALEXANDRE <br> MARTINS</h1>
-                <h2 class="profissao">PROGRAMADOR FULLSTACK</h2>
+                <h2 class="profissao">FULLSTACK DEVELOPER</h2>
             </div>
         </div>
         <div class="informacoes">
@@ -44,11 +44,11 @@
                     <h4>mai 2017 - Atualmente</h4>
                 </div>
                 <div class="bloco-b">
-                    <h4>Trabalhou de forma autônoma</h4>
-                    <p>Liderança de uma equipe com 18 pessoas, onde auxilio e dou
-                        suporte, focando no desenvolvimento e melhoria de cada um.
-                        Atuando em venda direta, com foco em fidelização dos clientes e
-                        captação de novos.</p>
+                    <h4>Autônomo</h4>
+                    <p>Liderança de uma equipe com 18 pessoas, onde auxiliei e dei
+                        suporte, focado no desenvolvimento e melhoria de cada um.
+                        Atuei em venda direta, com foco em fidelização de clientes e
+                        e novos consultores, em períodos de 3 meses atingindo metas de R$ 6.000,00.</p>
                 </div>
             </div>
             <div class="experiencia-2">
@@ -99,7 +99,7 @@
                     <p>Vendas</p>
                     <progress value="80" max="100">50%</progress>
                     <p>Prospecção de clientes</p>
-                    <progress value="25" max="100">50%</progress>
+                    <progress value="50" max="100">50%</progress>
                     <p>Desenho manual</p>
                     <progress value="60" max="100">50%</progress>
                 </div>
